# openCvCources

./: .gitignore
blemish_removal/: CMakeLists.txt  submission.cpp
coinDetector/: submission.cpp
colorSpaces/: CMakeLists.txt  main.cpp
erosion/: CMakeLists.txt  main.cpp
instagram_filters/: CMakeLists.txt  submission.cpp
lipstick_makeup/: CMakeLists.txt  Lipstick_Makeup.cpp
mouse/: CMakeLists.txt
overlight/: submission.cpp
qrcode/: platformDeps.pri  qrcode.pro
quality/: CMakeLists.txt
sharpness/: main.cpp
smile_detection/: CMakeLists.txt  Smile_Detection.cpp
trackbar/: CMakeLists.txt  submission.cpp
w1/qrcode/: main.cpp
w2/mouse/: submission.cpp
w2/trackbar/: submission.cpp
